--- a/index.html
+++ b/index.html
@@ -57,40 +57,40 @@
 			</div>
 			<div class="container-fluid">
 				<section id="main-content">
-					<article>
-						<div>
+					<article class="row">
+						<div class="col-sm-12 col-md-6">
 							<h1>Death to the Stock Photo: Special Thanks</h1>
 							<p>
 								A special thanks to Death to the Stock Photo for providing the photographs that you see in this template. Visit their website to become a member.
 							</p>
 						</div>
-						<div>
+						<div class="col-sm-12 col-md-6">
 							<img src="img/ipad.jpg" alt="Ipad image">
 						</div>
 					</article>
-					<article>
-						<div>
+					<article class="row">
+						<div class="col-sm-12 col-md-6">
 							<h1>3D Device Mockups by PSDCovers</h1>
 							<p>
 								Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by PSDCovers! Visit their website to download some of their awesome, free photoshop action
 							</p>
 						</div>
-						<div>
+						<div class="col-sm-12 col-md-6">
 							<img src="img/dog.jpg" alt="Dog image">
 						</div>
 					</article>
-					<article>
-						<div>
+					<article class="row">
+						<div class="col-sm-12 col-md-6">
 							<h1>Google Web Fonts and Font Awesome Icons</h1>
 							<p>This template features the 'Lato' font, part of the Google Web Font library, as well as icons from Font Awesome.</p>
 						</div>
-						<div>
+						<div class="col-sm-12 col-md-6">
 							<img src="img/phones.jpg" alt="Phones">
 						</div>
 					</article>
 				</section>
 			</div>
-			<div class="container-fluid">
+			<div class="container-fluid" id="banner-container">
 				<div id="banner">
 					<div class="banner-message">
 						<h1>Connect to Start Bootstrap:</h1>
@@ -106,6 +106,7 @@
 			</div>
 		</main>
 		<footer>
+			<div id="footer-content">
 				<div class="footer-links">
 					<ul>
 						<li><a href="#">Home</a></li>
@@ -117,13 +118,14 @@
 				<div class="footer-message">
 					<span>Copyright &copy; Your Company 2014. All Rights Reserved</span>
 				</div>
-			</footer>
+			</div>
+		</footer>
 
 			<!-- Optional JavaScript -->
     	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>	
-  	</body>
+  </body>
 		
 </html>
